--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-Flask==2.0.1
-Flask-Cors==3.0.10
-gunicorn==20.0.4
-Jinja2==3.0.1
-Werkzeug==2.0.1
-beautifulsoup4==4.9.3
-requests==2.24.0
-lxml==4.6.3
-Markdown==3.3.4
+flask
+flask_cors
+gunicorn
+bs4
+lxml
+
